fix: Table head size on Safari

--- a/src/drive/styles/filelist.styl
+++ b/src/drive/styles/filelist.styl
@@ -364,6 +364,7 @@ column-width-thumbnail-bigger = 7rem
 
     .fil-content-mobile-head
         display flex
+        flex-basis auto
 
     .fil-content-mobile-header.fil-content-header-sortasc
     .fil-content-mobile-header.fil-content-header-sortdesc
